--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@capacitor/core": "2.1.2",
+    "@ionic/pwa-elements": "^1.5.2",
     "@ionic/react": "^5.0.7",
+    "@ionic/react-hooks": "0.0.8",
     "@ionic/react-router": "^5.0.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -15,9 +17,13 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "@umijs/hooks": "^1.9.3",
+    "axios": "^0.19.2",
     "ionicons": "^5.0.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-intl": "^4.6.5",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -25,9 +31,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:mock": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve:mock": "REACT_APP_MOCK=true ionic serve",
+    "serve": "ionic serve"
   },
   "eslintConfig": {
     "extends": "react-app"
